open-webui-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: open-webui
spec:
  redirectScheme:
    scheme: https
    permanent: true
